feat: canvas 크기 상대적으로 변경

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <canvas id="canvas" width="368" height="368" style="background: transparent;"></canvas>
+        <canvas id="canvas" style="background: transparent;"></canvas>
     </div>
     <div class="container">
         <div class="box">
