--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <canvas id="canvas" style="background: transparent;"></canvas>
     </div>
     <div class="container">
-        <div class="box">
-            <div class="timer">
-                <h1>
+        <div id="box">
+            <div id="timer-div">
+                <h1 id="timer-text">
                     <span id="minutes">00</span>
                     :
                     <span id="seconds">00</span>
@@ -23,7 +23,7 @@
                     <span id="hundredths">00</span>
                 </h1>
             </div>
-            <div class="buttons">
+            <div id="button-div">
                 <button class="button reset-button" onclick="reset()">Reset</button>
                 <button id="toggle-button" class="button start-button" onclick="toggle()">Start</button>
             </div>
