feat: ldBar ui 개선

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
     </div>
     <div class="animatronic-div" class="inline" style="top: 80%; left: 50%;">
-        <img src="https://imgur.com/kygc37Z.png"></img>
+        <img src="https://imgur.com/IYN4Sma.png"></img>
         <span id="freddy" class="animatronic-text">3.02</span>
-        <img src="https://imgur.com/rNJkSpM.png"></img>
+        <img src="https://imgur.com/cLfb6S3.png"></img>
         <span id="foxy" class="animatronic-text animatronic-text-end">5.01</span>
     </div>
     <div class="animatronic-div" class="inline" style="top: 80%; left: 50%;">
@@ -42,9 +42,9 @@
         <div id="foxy-bar" class="ldBar animatronic-bar" data-preset="circle"></div>
     </div>
     <div class="animatronic-div" class="inline" style="top: 90%; left: 50%;">
-        <img src="https://imgur.com/64z9h0D.png"></img>
+        <img src="https://imgur.com/PYtSDVt.png"></img>
         <span id="bonnie" class="animatronic-text">4.97</span>
-        <img src="https://imgur.com/0pHv5cz.png"></img>
+        <img src="https://imgur.com/3NXzjVs.png"></img>
         <span id="chica" class="animatronic-text animatronic-text-end">4.98</span>
     </div>
     <div class="animatronic-div" class="inline" style="top: 90%; left: 50%;">
